<resources>
    <string name="app_name">Bloom</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="carrito">Carrito</string>
    <string name="prefer_ncies">Preferències</string>
    <string name="color_principal">Color principal</string>
    <string name="color_secundari">Color secundari</string>
    <string name="tipografia_de_lletra">Tipografia de lletra</string>
    <string name="guardar_canvis">Guardar canvis</string>
    <string name="modifica">Modifica</string>
    <string name="texto_ejemplo">Texto Ejemplo</string>
    <string name="opcion_ejemplo">Opcion Ejemplo</string>
    <string name="home">Home</string>
    <string name="email">Email</string>
    <string name="contrase_a">Contraseña</string>
    <string name="login">Login</string>
    <string name="registrarse">Registrarse</string>
    <string name="privacidad">Privacidad</string>
    <string name="tel_fono">Teléfono</string>
    <string name="repetir_contrase_a">Repetir contraseña</string>
    <string name="bienvenido">Bienvenido a Bloom</string>
    <string name="newsletter">Newsletter</string>
    <string name="acerca_de_nosotros">Acerca de nosotros</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum aliquet feugiat commodo. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="suscribirse">Suscribirse</string>
    <string name="buscar">Buscar</string>
    <string name="favoritos">Favoritos</string>
    <string name="perfil">Perfil</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="ajustes">Ajustes</string>
    <string name="men">Menú</string>
    <string name="descripcion_generica">Descripcion Generica</string>
    <string name="select_country">Selecciona un país</string>
    <string name="select_category">Selecciona una categoria</string>
    <string name="gracias_por_tu_compra">!Gracias por tu compra¡</string>
    <string name="acerca_de_pt1">En Bloom, nos especializamos en ofrecer flores frescas y de calidad para cualquier ocasión.</string>
    <string name="acerca_de_pt2">Con un enfoque en la sostenibilidad y el trabajo con proveedores locales, creamos ramos y arreglos únicos que expresan emociones y momentos especiales.</string>
    <string name="acerca_de_pt3">¡Nos encanta ayudarte a celebrar la belleza de la naturaleza!</string>
    <string name="total">Total:</string>
    <string name="comprar">Comprar</string>
    <string name="compras">Compras</string>
    <string name="nom_usuari">Nom Usuari</string>
    <string-array name="countries_array">
        <item>España</item>
        <item>Francia</item>
        <item>Alemania</item>
        <item>Italia</item>
        <item>Reino Unido</item>
    </string-array>

    <string-array name="categorias_array">
        <item>Ramos Flores</item>
        <item>Plantas Interior</item>
        <item>Plantas Exterior</item>
        <item>Flores Eventos</item>
        <item>Macetas y Accesorios</item>
        <item>Packs</item>
    </string-array>
</resources>