<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:icon="@drawable/home"
        android:title="@string/home"
        android:contentDescription="@string/descripcion_generica" />
    <item
        android:id="@+id/search"
        android:title="@string/buscar"
        android:icon="@drawable/search"
        android:contentDescription="@string/descripcion_generica" />
    <item
        android:id="@+id/fav"
        android:title="@string/favoritos"
        android:icon="@drawable/heart"
        android:contentDescription="@string/descripcion_generica" />
    <item
        android:id="@+id/profile"
        android:title="@string/perfil"
        android:icon="@drawable/user"
        android:contentDescription="@string/descripcion_generica" />
</menu>
