<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- ScrollView -->
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <!-- Contenedor principal -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Imagen de encabezado con texto superpuesto -->
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="250dp">

                <ImageView
                    android:id="@+id/img01"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/home_img"
                    android:contentDescription="Imagen Floristeria Home" />

                <TextView
                    android:id="@+id/textBien"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/bienvenido"
                    android:textSize="40sp"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:background="#88000000"
                    android:padding="8dp"
                    style="@style/Titulo"
                    android:layout_gravity="center" />
            </FrameLayout>

            <!-- Sección 'Acerca de nosotros' -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    style="@style/Subtitulo"
                    android:gravity="center"
                    android:text="@string/acerca_de_nosotros" />

                <TextView
                    android:layout_width="match_parent"
                    style="@style/Texto"
                    android:gravity="center"
                    android:text="@string/acerca_de_pt1" />

                <TextView
                    android:layout_width="match_parent"
                    style="@style/Texto"
                    android:gravity="center"
                    android:text="@string/acerca_de_pt2"
                    android:layout_marginTop="8dp" />

                <TextView
                    android:layout_width="match_parent"
                    style="@style/Texto_Blod"
                    android:gravity="center"
                    android:text="@string/acerca_de_pt3"
                    android:layout_marginTop="8dp" />
            </LinearLayout>

            <!-- Sección 'Newsletter' -->
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="100dp">
                <ImageView
                    android:id="@+id/img02"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/img_home_news"
                    android:scaleType="centerCrop"
                    android:contentDescription="Imagen Floristeria Home Newsletter" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/textNews"
                    android:text="@string/newsletter"
                    android:textSize="30sp"
                    style="@style/Titulo"
                    android:background="#74000000"
                    android:textColor="@color/white"
                    android:gravity="center" />
            </FrameLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>
