<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Preferencias">

    <!-- Fragment 1 en la parte superior -->
    <fragment
        android:id="@+id/fragment1"
        android:name="com.example.bloom.Fragment_Header"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:layout_constraintTop_toTopOf="@+id/main"/>

    <!-- TextoView Preferències -->
    <TextView
        android:id="@+id/textViewPreferencias"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        style="@style/Titulo"
        android:text="@string/prefer_ncies"
        app:layout_constraintTop_toBottomOf="@id/fragment1"
        tools:ignore="MissingConstraints" />

    <!-- TextView Color Principal -->
    <TextView
        android:id="@+id/textViewPrincipal"
        android:layout_marginStart="50dp"
        android:text="@string/color_principal"
        style="@style/Subtitulo"
        app:layout_constraintTop_toBottomOf="@+id/textViewPreferencias"
        tools:ignore="MissingConstraints"/>

    <!-- View Caja Color(Verde Principal) -->
    <View
        android:id="@+id/colorBox01"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:background="@color/purple_primary"
        android:layout_marginEnd="40dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewPrincipal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- TextView Color Secundari -->
    <TextView
        android:id="@+id/textViewSecondary"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/color_secundari"
        style="@style/Subtitulo"
        app:layout_constraintTop_toBottomOf="@id/colorBox01"
        tools:ignore="MissingConstraints"/>

    <!-- View Caja Color(Verde Secundario) -->
    <View
        android:id="@+id/colorBox02"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:background="@color/blue_dark"
        android:layout_marginEnd="40dp"
        app:layout_constraintTop_toBottomOf="@id/textViewSecondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- TextView Tipografia -->
    <TextView
        android:id="@+id/textViewTipografia"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/tipografia_de_lletra"
        style="@style/Subtitulo"
        android:textSize="23sp"
        app:layout_constraintTop_toBottomOf="@id/colorBox02"
        tools:ignore="MissingConstraints"/>

    <!-- View Caja tipo Tipografia -->
    <View
        android:id="@+id/colorBox03"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:background="#9F9A9B"
        android:layout_marginEnd="40dp"
        app:layout_constraintTop_toBottomOf="@id/textViewTipografia"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/textTipografia"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:text="@string/texto_ejemplo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewTipografia" />

    <!-- Boton Guardar -->
    <Button
        android:id="@+id/btn_guardar"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="25dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="@color/purple_primary"
        android:gravity="center"
        android:text="@string/guardar_canvis"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/colorBox03">
    </Button>

    <!-- Botones de Modifica -->
    <Button
        android:id="@+id/btn_modifica01"
        style="@style/Button"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="40dp"
        android:text="@string/modifica"
        app:layout_constraintTop_toBottomOf="@id/colorBox02"
        app:layout_constraintEnd_toEndOf="parent">
    </Button>

    <Button
        android:id="@+id/btn_modifica02"
        style="@style/Button"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="40dp"
        android:text="@string/modifica"
        app:layout_constraintTop_toBottomOf="@id/colorBox01"
        app:layout_constraintEnd_toEndOf="parent">
    </Button>

    <Button
        android:id="@+id/btn_modifica03"
        style="@style/Button"
        android:layout_marginEnd="40dp"
        android:text="@string/modifica"
        app:layout_constraintTop_toBottomOf="@id/textViewPreferencias"
        app:layout_constraintEnd_toEndOf="parent">
    </Button>

    <!-- Fragment 2 alineado en la parte inferior -->
    <fragment
        android:id="@+id/fragment2"
        android:name="com.example.bloom.Fragment_Header"
        android:layout_width="0dp"
        android:layout_height="66dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>