<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home">

    <!-- Contenedor para Fragment_Header -->
    <FrameLayout
        android:id="@+id/fragment_container_header"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- ScrollView -->
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/fragment_container_header"
        app:layout_constraintBottom_toTopOf="@id/fragment_container_bottom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Contenedor para varios elementos -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!-- Imagen Encabezado -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!-- Imagen de encabezado -->
                <ImageView
                    android:id="@+id/img01"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/home_img"
                    android:contentDescription="Imagen Floristeria Home" />

                <!-- Texto de bienvenida -->
                <TextView
                    android:id="@+id/textBien"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bienvenido"
                    android:textSize="30sp"
                    android:textColor="@color/white"
                    android:layout_centerInParent="true"
                    android:background="#88000000"
                    android:padding="8dp" />
            </RelativeLayout>

            <!-- Acerca de... -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="30dp"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Subtitulo"
                    android:text="@string/acerca_de_nosotros"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Texto"
                    android:text="@string/lorem_ipsum"/>

            </LinearLayout>

            <!-- Newsletter -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!-- Imagen Newsletter -->
                <ImageView
                    android:id="@+id/img02"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:src="@drawable/home_img03"
                    android:scaleType="centerCrop"
                    android:contentDescription="Imagen Floristeria Home Newsletter" />

                <!-- Texto Newsletter -->
                <TextView
                    android:id="@+id/textNews"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/newsletter"
                    android:textSize="30sp"
                    style="@style/Titulo"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="30dp"/>
                <Button
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    style="@style/Button"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="90dp"
                    android:text="@string/suscribirse"/>
            </RelativeLayout>
        </LinearLayout>

        <!-- Equipo -->

    </ScrollView>

    <!-- Contenedor para FragmentBottom -->
    <FrameLayout
        android:id="@+id/fragment_container_bottom"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
